# app/Http/Controllers/TestController.php
@@ -12,7 +12,17 @@ class TestController extends Controller
     }
 
     public function show(string $id)
+    {   
+        // dd(request()->path);
+        // return $id;
+        // return (response(dd(request()->path(), 200))->header('Content-Type', 'text/html'));
+        // return response(dump(request()->path()), 200)
+        //     ->header('Content-Type', 'text/html');
+        return request()->fullUrl();
+    }
+
+    public function store()
     {
-        return $id;
+        return request()->file('item_image')->getClientOriginalName();
     }
 }
